[project]
name = "multi-platform-content-agent"
version = "1.0.0"
description = "A CrewAI and DeepSeek powered content planning workflow for Douyin and Xiaohongshu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[litellm]==1.14.3",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0,<2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
content-agent = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
